# campus_security

./: .gitignore  README.md  app.py  detect_department.py  dominant_color.py  face_utils.py  identify_department.py  log.py  match_face.py  pyproject.toml  register_user.py  uniform.py
models/: yolov8n.pt
runs/content/runs/detect/train/: args.yaml  results.csv
templates/: index.html  logs.html  register.html
utils/: color_to_department.py  colors.py  detect_shirt.py  dominant_color.py  face_utils.py  get_hsv.py
